VirtualService.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-hello
  labels:
    app: hello
spec:
  selector:
    app: hello
  type: NodePort
  ports:
    - name: http
      port: 8080
      nodePort: 30001
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-hello
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: svc-hello-v1
  labels:
    app: hello
spec:
  selector:
    app: hello
    version: v1
  ports:
    - name: http
      protocol: TCP
      port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: svc-hello-v2
  labels:
    app: hello
spec:
  selector:
    app: hello
    version: v2
  ports:
    - name: http
      protocol: TCP
      port: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-hello
spec:
  hosts:
    - svc-hello
  http:
  - match:
    - uri:
        prefix: "/v2"
    route:
    - destination:
        host: "svc-hello-v2.ideyedi.svc.cluster.local"
      weight: 100
  - route:
    - destination:
        host: "svc-hello-v1"
      weight: 100
